# warp-wasm-templates

./: .gitignore  ContractTransform.js  README.md  package.json  tsconfig.json
deploy/: utils.js
rust/: .gitignore  Cargo.toml  README.md  build.sh  package.json
rust/deploy/local/: contract-tx-id.txt  wallet_local.json
rust/deploy/mainnet/: contract-tx-id.txt  interact-balance-mainnet.js
rust/deploy/scripts/: deploy.js  interact-balance.js  interact-transfer.js
rust/deploy/scripts/utils/: connect-contract.js  contract-tx-id.js
rust/deploy/state/: init-state.json
rust/deploy/testnet/: contract-tx-id.txt  read-contract-state-testnet.js  wallet_testnet.json
rust/pst/: .eslintrc.json  .gitignore  README.md  logs  package.json
rust/pst/contract/definition/: Cargo.toml
rust/pst/contract/implementation/: Cargo.toml
rust/pst/definition/: Cargo.toml
rust/pst/implementation/: Cargo.toml
rust/pst/scripts/: generate-ts.ts  generation-utils.ts
rust/pst/src/: action.rs  contract.rs
rust/pst/tests/: contract.spec.ts
rust/shared/: Cargo.toml
rust/src/: action.rs  contract.rs  state.rs
rust/src/actions/: balance.rs  evolve.rs  foreign_call.rs  foreign_read.rs  foreign_write.rs  mod.rs  transfer.rs
rust/src/contract_utils/: entrypoint.rs  foreign_call.rs  js_imports.rs  mod.rs
rust/tests/: contract.spec.ts
rust/tests/data/: rust-contract_bg.wasm
rust/token/: Cargo.toml
rust/toy-contract/: Cargo.toml  package.json  tsconfig.json
rust/toy-contract/deploy/: deploy.ts
rust/toy-contract/src/: lib.rs
rust/toy-contract/tests/: contract.spec.ts
(+141 files in other folders)
