[package]
name = "smartweave-contract"
version = "0.1.0"
authors = ["Sample smartweave contract"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.29" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3.56"

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
demangle-name-section = false
