[package]
name = "warp_pst_implementation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
warp_pst = { path = "../definition" }
warp_wasm_utils = { path = "../../../shared" }
wasm-bindgen = { version = "=0.2.79", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.29" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3.56"
async-recursion = "1.0.0"
async-trait = "0.1.56"
tokio-test = "0.4.2"

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
demangle-name-section = false
